add logic for isosceles and scalene triangles

--- a/triangle-tracker/triangle-tracker.html
+++ b/triangle-tracker/triangle-tracker.html
@@ -13,13 +13,15 @@
 
       <form id="sides">
         <div class="form-group">
-          <label for="year">Side 1:</label>
+          <label for="side">Side 1:</label>
           <input id="side1" type="text">
-
-          <label for="year">Side 2:</label>
+        </div>
+        <div class="form-group">
+          <label for="side">Side 2:</label>
           <input id="side2" type="text">
-
-          <label for="year">Side 3:</label>
+        </div>
+        <div class="form-group">
+          <label for="side">Side 3:</label>
           <input id="side3" type="text">
         </div>
 
@@ -27,7 +29,7 @@
       </form>
 
       <div id="result">
-        <p>Those three sides make a<span class="not"></span> triangle.</p>
+
       </div>
     </div>
   </body>
